--- a/index.html
+++ b/index.html
@@ -3,10 +3,113 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homework</title>
   </head>
   <body>
-    <script type="module" src="./index.js"></script>
+    <!-- <button id="btn">Submit</button>
+    <p id="text">Lorem ipsum dolor sit amet.</p>
+    <a id="link" href="#">Kun uz ga otish</a>
+    <img
+      src="https://hips.hearstapps.com/hmg-prod/images/2024-chevrolet-camaro-ss-collectors-edition-1-647e1933c6c20.jpg?crop=0.755xw:0.696xh;0.112xw,0.233xh&resize=800:*"
+      alt=""
+    />
+    <div id="block">
+      <h1>Hello</h1>
+    </div> -->
+    <div class="cards" style="display: flex; flex-direction: column; gap: 20px">
+        <div
+          class="card"
+          style="
+            display: flex;
+            align-items: center;
+            gap: 70px;
+            border: 1px solid black;
+            padding: 10px;
+          "
+        >
+          <img src="./img/mustang.webp" alt="" width="225px;" ; height="225px" />
+          <div class="text">
+            <h1>Mustang</h1>
+            <h4>35000</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, hic!
+            </p>
+          </div>
+          <button
+            id="btn"
+            style="
+            color: white;
+              padding: 10px 17px;
+              background-color: red;
+              margin-left: 350px;
+            "
+          >
+            Delete
+          </button>
+        </div>
+        <div
+          class="card"
+          style="
+            display: flex;
+            align-items: center;
+            gap: 70px;
+            border: 1px solid black;
+            padding: 10px;
+          "
+        >
+          <img src="./img/camaro.jpg" width="225px" height="225px" alt="" />
+          <div class="text">
+            <h1>Camaro</h1>
+            <h4>40000</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, hic!
+            </p>
+          </div>
+          <button
+            id="btn"
+            style="
+            color: white;
+              padding: 10px 17px;
+              margin-left: 350px;
+              background-color: red;
+            "
+          >
+            Delete
+          </button>
+        </div>
+        <div
+          class="card"
+          style="
+            display: flex;
+            align-items: center;
+            gap: 70px;
+            border: 1px solid black;
+            padding: 10px;
+          "
+        >
+          <img src="./img/nexia2.jpg" width="225px" height="225px" alt="" />
+          <div class="text">
+            <h1>Nexia 2</h1>
+            <h4>22000</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, hic!
+            </p>
+          </div>
+          <button
+            id="btn"
+            style="
+            color: white;
+              padding: 10px 17px;
+              margin-left: 350px;
+              background-color: red;
+            "
+          >
+            Delete
+          </button>
+        </div>
+      </div>
     
+    </div>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
